OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Performance_Config__mdt/Onboarding_Performance_Config__mdt.object-meta.xml
<CustomObject>
    <label>Onboarding Performance Config</label>
    <pluralLabel>Onboarding Performance Configs</pluralLabel>
</CustomObject>