OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Performance_Config__mdt/fields/Defer_Onboarding_Tail__c.field-meta.xml
<CustomField>
    <fullName>Defer_Onboarding_Tail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defer Onboarding Tail</label>
    <type>Checkbox</type>
</CustomField>