OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Performance_Config__mdt/fields/Enable_Flow_Segment_Telemetry__c.field-meta.xml
<CustomField>
    <fullName>Enable_Flow_Segment_Telemetry__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Flow Segment Telemetry</label>
    <type>Checkbox</type>
</CustomField>