OnboardingV2Minimal/force-app/main/default/objects/Onboarding_Performance_Config__mdt/fields/Publish_Chain_Progress_Events__c.field-meta.xml
<CustomField>
    <fullName>Publish_Chain_Progress_Events__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Publish Chain Progress Events</label>
    <type>Checkbox</type>
</CustomField>